--- a/dashboardv2/public/css/scss/search.scss
+++ b/dashboardv2/public/css/scss/search.scss
@@ -83,6 +83,11 @@ a:hover {
     margin-left: 14px;
   }
 }
+.rcp-icon-btn{
+  background-color: white;
+  border: 1px solid #9C9C9C;
+  height: 35.7px;
+}
 
 .filterQuery {
   word-break: break-all;
