Assign term wizard css changes

--- a/dashboardv2/public/css/scss/glossary.scss
+++ b/dashboardv2/public/css/scss/glossary.scss
@@ -160,3 +160,11 @@ display: flex;
 align-items: center;
 color: #333333;
 }
+
+.jstree-default-dark .jstree-anchor {
+    text-shadow: none;
+}
+
+.body .current{
+    background: white;
+}
