--- a/dashboardv2/public/js/templates/glossary/AssignTermLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/AssignTermLayoutView_tmpl.html
@@ -14,22 +14,57 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
-{{#if isAttributeRelationView}}
 
+<!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
+<script>
+jQuery(document).ready(function($){
+    $('[href="#next"]').on({
+     'click': function(){
+         $('#change-image').attr('src','img/Dot-filled.svg');
+         $('#final-image').attr('src','img/dot.svg');
+
+     }
+ });  
+ $('[href="#previous"]').on({
+     'click': function(){
+         $('#change-image').attr('src','img/dot.svg');
+         $('#final-image').attr('src','img/Oval.svg');
+
+     }
+ });  
+ $('[href="#finish"]').on({
+     'click': function(){
+         $('#final-image').attr('src','img/Dot-filled.svg');
+
+     }
+ });
+});
+</script>
+{{#if isAttributeRelationView}}
 <div data-id="wizard">
     
-    <h3> <span><img style="margin-right: 12px;" src="img/dot.svg" alt=""></span><span><img style="margin-right: 2px;" src="img/Bar.svg" alt=""></span>Select Term</h3>
-    <section>
-        <div id="r_glossaryTree"></div>
+    <h3> <span><img id="change-image" style="margin-right: 17px;" src="img/dot.svg" alt=""></span><span><img style="margin-right: -142px;padding-left: 89px;" src="img/Bar.svg" alt=""></span>Select Term</h3>
+    <section class="onclickjstree" style="background-color: white;">
+        <div id="r_glossaryTree" ></div>
     </section>
-    <h3 >  <span><img style="margin-right: 12px;" src="img/dot.svg" alt=""></span>Attributes</h3>
-    <section>
+    <h3 >  <span><img id="final-image" style="margin-right: 12px;" src="img/Oval.svg" alt=""></span>Attributes</h3>
+    <section style="background-color: white;">
         <form name="termAttributeForm" class="form-horizontal" data-id="termAttributeForm">
             {{#each selectedTermAttributeList}}
-            <div class="form-group">
-                <label class="control-label col-sm-2" for="name">{{@key}}</label>
+            <div class="form-group" style="display: flex; flex-direction: column;">
+                <div style="display: flex; justify-content: flex-start;">
+                <label style="font-family: Rakuten Sans UI;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 12px;
+                line-height: 16px;
+                color: #686868;
+                margin-bottom: 10px;
+                margin-left: 8px;
+                text-align: left;" class="control-label col-sm-2" for="name">{{@key}}</label>
+                </div>
                 <div class="col-sm-10">
-                    <input class="form-control" name="{{@key}}" data-id="name" placeholder="{{@key}}" />
+                    <input style="background-color: white; border: 1px black solid; color: black;" class="form-control" name="{{@key}}" data-id="name" placeholder="{{@key}}" />
                 </div>
             </div>
             {{/each}}
