--- a/dashboardv2/public/css/scss/theme.scss
+++ b/dashboardv2/public/css/scss/theme.scss
@@ -161,7 +161,7 @@ header.atlas-header {
     
     .title {
         padding-top: 0;
-        // margin-left: 2px;
+        margin-left: 2px;
     }
 
     h1 {
