--- a/dashboardv2/public/js/templates/glossary/GlossaryDetailLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/GlossaryDetailLayoutView_tmpl.html
@@ -19,7 +19,7 @@
         <i class="fa fa-refresh fa-spin-custom"></i>
     </div>
     <div data-id="details" class="clearfix form-horizontal col-sm-12" >
-        <h1 class="row title"><span data-id="title"></span></h1>
+        <h1 class="row title"><span style="padding-left: 15px;" data-id="title"></span></h1>
         <button type="button" data-id="editButton" class="btn btn-sm btn-action pull-right"><i class="fa fa-pencil"></i></button>
         <div class="form-group clearfix">
             <span class="pull-left text-muted">Short Description:&nbsp;</span>
