--- a/dashboardv2/public/js/templates/tag/AddTagModalView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/AddTagModalView_tmpl.html
@@ -50,7 +50,7 @@
         <div class="col-sm-12" style="box-sizing: border-box;">
             
             <div class="panel panel-default" data-id="validityPeriodBody" style="display: none;border:none;box-sizing: border-box;">
-                <div class="panel-body"  data-id="addTimezoneDiv">
+                <div class="panel-body"  data-id="addTimezoneDiv" style="padding: 0px;">
                 </div>
             </div>
             <div class="clearfix form-group btn-add-time">
