--- a/dashboardv2/public/js/templates/tag/AddTimezoneView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/AddTimezoneView_tmpl.html
@@ -19,11 +19,13 @@
 <div class="form-group clearfix" >
     <div class="col-sm-4" style="margin-right: -30px;">
         <label class="col-sm-12 required" for="" style="border:0.5px #F2F2F2 solid;padding: 10px;margin-right: 20px;margin-bottom: -1.5px;">Start Time</label>
-        <input type="text" style="background-color: white; border: 1px #F2F2F2 solid; color: #686868;border-radius: 0px;" class="form-control start-time" name="startTime" data-id="startTime" placeholder="Start Time" readonly />
+    <div>
+        <input type="text" style="border-radius:5px; outline: solid;outline-style: 10px; outline-width: 1px; background-color: white; border: 1px #F2F2F2 solid; color: #686868;border-radius: 5px;" class="form-control start-time" name="startTime" data-id="startTime" placeholder="Start Time" readonly />
+    </div>
     </div>
     <div class="col-sm-4" style="margin-right: -30px;">
         <label class="col-sm-12 required" for="" style="border:0.5px #F2F2F2 solid;padding: 10px;margin-bottom: -1.5px;">End Time</label>
-        <input type="text" style="background-color: white; border: 1px #F2F2F2 solid; color: #686868;margin-top: 2px;border-radius: 0px;" class="form-control end-time" name="endTime" data-id="endTime" placeholder="End Time" readonly />
+        <input type="text" style=" border-radius:5px; outline: solid;outline-style: 10px; outline-width: 1px; background-color: white; border: 1px #F2F2F2 solid; color: #686868;margin-top: 2px;border-radius: 5px;" class="form-control end-time" name="endTime" data-id="endTime" placeholder="End Time" readonly />
     </div>
     <div class="col-sm-3" style="margin-right: -30px;">
         <label class="col-sm-12 required" for="" style="border:0.5px #F2F2F2 solid;padding: 10px;margin-bottom: -1.5px;">TimeZone</label>
@@ -31,7 +33,7 @@
         </select>
     </div>
     <div class="col-sm-1 attributePlusData" align="right" style="margin-top: 0px;">
-        <label class="col-sm-12 required" for="" style="border:0.5px #F2F2F2 solid;padding: 10px;width: 80px;padding-right: 55px;margin-bottom: 0px;">Action</label>
+        <label class="col-sm-12 required" for="" style="border:0.5px #F2F2F2 solid;padding: 10px;width: 80px;padding-right: 120px;margin-bottom: 0px;">Action</label>
         <button type="button" class="  " style="background-color: transparent;border:transparent;margin-top: 6px;margin-left: 14px;" data-id="close"><img src="img/closeIcon.svg" width="20px" height="20px" class="close closeIcon"></button>
     </div>
 </div>
