--- a/dashboardv2/public/js/templates/search/SearchLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchLayoutView_tmpl.html
@@ -15,7 +15,7 @@
  * limitations under the License.
 -->
 <div class="row row-margin-bottom">
-    <div class="col-sm-12" style="margin:15px 0px;">
+    <div class="col-sm-12" >
         <div class="row">
             <div class="col-sm-9" style="margin-top: 5px;">
                 <span class="pull-left">Basic</span>
