--- a/dashboardv2/public/css/scss/override.scss
+++ b/dashboardv2/public/css/scss/override.scss
@@ -440,8 +440,9 @@ div.columnmanager-visibilitycontrol {
     margin-bottom: 5px;
 
     &.open .btn-action {
-        background-color: $color_rcp_primary;
-        color: $white;
+        i{
+            color: $color_rcp_secondary;
+        }
     }
 }
 
@@ -449,6 +450,7 @@ div.columnmanager-visibilitycontrol {
 div.columnmanager-dropdown-container {
     .columnmanager-dropdown-item {
         padding: 10px 16px;
+        width: 285px;
     }
 
     &.open {
