--- a/dashboardv2/public/js/templates/tag/TagAttributeDetailLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/TagAttributeDetailLayoutView_tmpl.html
@@ -20,7 +20,10 @@
     </div>
     <div class="tagDetail clearfix form-horizontal col-sm-12">
         <h1 style="padding-left: 0px; margin-left: -15px; " class="row title"><span data-id="title"></span></h1>
-        <button type="button" data-id="editButton" class="btn btn-sm btn-action pull-right"><i class="fa fa-pencil"></i></button>
+        <button type="button" data-id="editButton" class="rcp-icon-btn pull-right" style="border-color: transparent;"><svg style="padding: 5px;" width="30" height="30" viewBox="-3 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path d="M15.1334 3.10641C15.6222 3.59516 15.6222 4.38766 15.1334 4.87641L14.2322 5.77766L13.3478 4.89391L14.249 3.99266L11.7572 1.50078L10.8559 2.40203L9.97217 1.51828L10.8734 0.617031C11.3622 0.127656 12.1547 0.127656 12.6434 0.617031L15.1334 3.10641ZM2.76313 10.8286L4.92188 12.9867L2.14626 13.6036L2.76313 10.8286ZM5.97251 12.2698L3.48001 9.77734L9.08751 4.16984L11.58 6.66172L5.97251 12.2698ZM13.3481 6.66172L12.4637 5.77797L9.09125 2.40422L9.08812 2.40234L1.71687 9.77297L0.5 15.2498L5.97687 14.033L13.3481 6.66172ZM15.5 17.75H0.5V16.5H15.5V17.75Z"/>
+            </svg>
+        </button>
         <p class="form-group" data-id="description"></p>
         <div class="superType form-group" style="display:none">
             <label class="control-label-sm-pr pull-left">Direct super-classifications:</label>
