--- a/dashboardv2/public/js/templates/tag/TagAttributeItemView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/TagAttributeItemView_tmpl.html
@@ -27,11 +27,11 @@
         </div>
     </div> -->
     <div class="col-sm-7" style="padding: 10px;   border: 0.5px #F2F2F2 solid;">
-        <input class="form-control attributeInput" data-id="attributeInput" placeholder="Attribute name" style="background-color: white; border: 1px black solid; color: black;">
+        <input class="form-control attributeInput" data-id="attributeInput" placeholder="Attribute name" style="background-color: white; border: 1px #9C9C9C solid; color: black;">
         </input>
     </div>
     <div class="col-sm-3" style="padding: 10px;   border: 0.5px #F2F2F2 solid;">
-        <select class="form-control dataTypeSelector" data-id="dataTypeSelector" style="background-color: white; border: 1px black solid; color: black;">
+        <select class="form-control dataTypeSelector" data-id="dataTypeSelector" style="background-color: white; border: 1px #9C9C9C solid; color: black;">
             <option selected="selected">string</option>
             <option>boolean</option>
             <option>byte</option>
