--- a/dashboardv2/public/js/templates/glossary/AssignTermLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/AssignTermLayoutView_tmpl.html
@@ -64,7 +64,7 @@ jQuery(document).ready(function($){
                 text-align: left;" class="control-label col-sm-2" for="name">{{@key}}</label>
                 </div>
                 <div class="col-sm-10">
-                    <input style="background-color: white; border: 1px black solid; color: black;" class="form-control" name="{{@key}}" data-id="name" placeholder="{{@key}}" />
+                    <input style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;" class="form-control" name="{{@key}}" data-id="name" placeholder="{{@key}}" />
                 </div>
             </div>
             {{/each}}
