--- a/dashboardv2/public/js/templates/glossary/CreateEditCategoryTermLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/CreateEditCategoryTermLayoutView_tmpl.html
@@ -30,7 +30,7 @@
             </label>
         </div>
         <div class="col-sm-10">
-            <input class="form-control" style="background-color: white; border: 1px black solid; color: black;" data-id="name" name="name" value="{{modelJSON.name}}" placeholder="Name(required)" autofocus />
+            <input class="form-control" style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;width: 560px;" data-id="name" name="name" value="{{modelJSON.name}}" placeholder="Name(required)" autofocus />
         </div>
     </div>
     <div class="form-group" style="display: flex; flex-direction: column;">
@@ -45,7 +45,7 @@
             margin-left: 27px;" for="description">Short Description</label>
         </div>
         <div class="col-sm-10">
-            <input style="background-color: white; border: 1px black solid; color: black;" class="form-control" name="shortDescription" data-id="shortDescription" value="{{modelJSON.shortDescription}}" placeholder="Short Description" />
+            <input style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;width: 560px;" class="form-control" name="shortDescription" data-id="shortDescription" value="{{modelJSON.shortDescription}}" placeholder="Short Description" />
         </div>
     </div>
     <div class="form-group"  style="display: flex; flex-direction: column;">
@@ -59,7 +59,7 @@
             margin-bottom: 10px;
             margin-left: 27px;"  for="description">Long Description</label>
         </div>
-        <div class="col-sm-10" style="background-color: white; border: 1px black solid; color: black; margin-left: 14px; border-radius: 4px; ">
+        <div class="col-sm-10" style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;width: 560px; margin-left: 14px; border-radius: 4px; ">
             <textarea  name="longDescription" data-id="longDescription" placeholder="Long Description">{{modelJSON.longDescription}}</textarea>
         </div>
     </div>
