--- a/dashboardv2/public/js/templates/glossary/CreateEditGlossaryLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/glossary/CreateEditGlossaryLayoutView_tmpl.html
@@ -28,7 +28,7 @@
             class="{{#if create}}required{{/if}}" for="name">Name</label>
             </div>
         <div class="col-sm-10">
-            <input class="form-control" style="background-color: white; border: 1px black solid; color: black;" name="name" value="{{name}}" data-id="name" placeholder="Name(required)" autofocus />
+            <input class="form-control" style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;width: 560px;" name="name" value="{{name}}" data-id="name" placeholder="Name(required)" autofocus />
         </div>
     </div>
     <div class="form-group" style="display: flex; flex-direction: column;">
@@ -43,7 +43,7 @@
             margin-left: 27px;" for="description">Short Description</label>
         </div>
         <div class="col-sm-10">
-            <input class="form-control" style="background-color: white; border: 1px black solid; color: black;" name="shortDescription" data-id="shortDescription" value="{{shortDescription}}" placeholder="Short Description" />
+            <input class="form-control" style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;width: 560px;" name="shortDescription" data-id="shortDescription" value="{{shortDescription}}" placeholder="Short Description" />
         </div>
     </div>
     <div class="form-group" style="display: flex; flex-direction: column;">
@@ -57,7 +57,7 @@
         margin-bottom: 10px;
         margin-left: 27px;" for="description">Long Description</label>
     </div>
-        <div class="col-sm-10" style="background-color: white; border: 1px black solid; color: black; margin-left: 14px; border-radius: 4px; " >
+        <div class="col-sm-10" style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;width: 560px; margin-left: 14px; border-radius: 4px; " >
             <textarea name="longDescription" data-id="longDescription" placeholder="Long Description">{{longDescription}}</textarea>
         </div>
     </div>
