--- a/dashboardv2/public/js/templates/tag/AddTimezoneView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/AddTimezoneView_tmpl.html
@@ -17,17 +17,17 @@
 
     
 <div class="form-group clearfix" >
-    <div class="col-sm-4" style="margin-right: -30px;">
+    <div class="col-sm-4 timeZoneView">
         <label class="col-sm-12 required" for="" style="border:0.5px #F2F2F2 solid;padding: 10px;margin-right: 20px;margin-bottom: -1.5px;">Start Time</label>
     <div>
         <input type="text" style="border-radius:5px; outline: solid;outline-style: 10px; outline-width: 1px; background-color: white; border: 1px #F2F2F2 solid; color: #686868;border-radius: 5px;" class="form-control start-time" name="startTime" data-id="startTime" placeholder="Start Time" readonly />
     </div>
     </div>
-    <div class="col-sm-4" style="margin-right: -30px;">
+    <div class="col-sm-4 timeZoneView">
         <label class="col-sm-12 required" for="" style="border:0.5px #F2F2F2 solid;padding: 10px;margin-bottom: -1.5px;">End Time</label>
         <input type="text" style=" border-radius:5px; outline: solid;outline-style: 10px; outline-width: 1px; background-color: white; border: 1px #F2F2F2 solid; color: #686868;margin-top: 2px;border-radius: 5px;" class="form-control end-time" name="endTime" data-id="endTime" placeholder="End Time" readonly />
     </div>
-    <div class="col-sm-3" style="margin-right: -30px;">
+    <div class="col-sm-3 timeZoneView">
         <label class="col-sm-12 required" for="" style="border:0.5px #F2F2F2 solid;padding: 10px;margin-bottom: -1.5px;">TimeZone</label>
         <select class="form-control row-margin-bottom time-zone" style="border:0.5px #F2F2F2 solid;border-radius: 0px;" data-id="timeZone" required>
         </select>
