--- a/dashboardv2/public/js/templates/site/Header.html
+++ b/dashboardv2/public/js/templates/site/Header.html
@@ -23,18 +23,18 @@
                         <img src="img/R_logo.png" height="64px" width="64px">
                     </div>
                 </div>
-                <div class="bars-icon" style=" display: flex;flex:0.35; align-items: center; justify-content: center; margin-left: 5px;">
+                <div class="bars-icon headerIcons">
                     <a href="javascript:void(0);" data-id="menuHamburger"><i class="fa fa-bars fa-lg" style="color: gray;"></i></a>
                 </div>
             </div>
-            <div style="flex: 0.9;  display: flex;align-items: flex-start; justify-content: center; flex-direction: column; margin-left: 10px;">
+            <div class="headerLogo">
                 <div class="title" style="font-weight: bold; color: black; font-size: 16px;">Data Realm</div>
                 <div class="subtitle" style="font-weight: bold;  font-size: 12px;">Dashboard</div>
             </div>
         </div>
         
         <div class="has-feedback align-left-right-icon search-box header-sec2">
-            <div style="display: flex; width: 100%; align-items: center; justify-content: center; font-family: Rakuten Sans UI;">
+            <div class="headerTextView">
             <div style="align-items: center; justify-content: center; ">
                 <span class="fa fa-search form-control-feedback" style="margin-top: 15px;"></span>
             </div>
