--- a/dashboardv2/public/css/scss/override.scss
+++ b/dashboardv2/public/css/scss/override.scss
@@ -236,7 +236,7 @@
   padding: 0;
 }
 
-svg:hover {
+button svg:hover {
   //fill: #C53E6C;
   background-color: #a53159;
   border-radius: 4px;
@@ -740,7 +740,7 @@ div.columnmanager-dropdown-container {
   border-radius: 4px;
 }
 
-svg:hover {
+button svg:hover {
   //fill: #C53E6C;
   background-color: #a53159;
   border-radius: 4px;
