Changes on side bar

--- a/dashboardv2/public/css/scss/tab.scss
+++ b/dashboardv2/public/css/scss/tab.scss
@@ -95,6 +95,7 @@ ul.tabs li.tab {
     white-space: nowrap;
     padding: 0;
     transition: color 0.28s ease;
+    margin-top: 29px;
 
     .indicator {
         position: absolute;
