--- a/dashboardv2/public/js/templates/tag/CreateTagLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/tag/CreateTagLayoutView_tmpl.html
@@ -32,7 +32,7 @@
         </div> 
         {{#if create}}
         <div class="col-sm-12">
-            <input class="form-control" style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;width: 560px;" data-id="tagName" placeholder="Name(required)" autofocus />
+            <input class="form-control" style="background-color: white; border: 1px #9C9C9C solid; color: black;" data-id="tagName" placeholder="Name(required)" autofocus />
         </div>
         {{else}}
         <span class="ellipsis-with-margin control-label text-left col-sm-10" data-id="title"></span> {{/if}}
@@ -48,7 +48,7 @@
         margin-left: 27px;
         "  for="description">Description</label>
         <div class="col-sm-12">
-            <input class="form-control" data-id="description"  style="background-color: #FFFFFF; border: 1px #9C9C9C solid; color: black;width: 560px;" value="{{description}}" placeholder="Description(required)" />
+            <input class="form-control" data-id="description"  style="background-color: white; border: 1px #9C9C9C solid; color: black;" value="{{description}}" placeholder="Description(required)" />
         </div>
     </div>
     {{#if create}}
