Ui-Atlas removed

--- a/dashboardv2/public/js/templates/search/AdvancedSearchInfo_tmpl.html
+++ b/dashboardv2/public/js/templates/search/AdvancedSearchInfo_tmpl.html
@@ -30,7 +30,7 @@
             <p>DB where name="Reporting" select name, owner limit 10 offset 0</p>
         </li>
     </ul>
-    <div class="moreLink">
+    <!-- <div class="moreLink">
         <a href="http://atlas.apache.org/#/SearchAdvance" target="_blank"><img src="img/info.svg" height="20px" width="20px"> <span class="moreLinkText">&nbsp; More sample queries and use-cases</span></a>
-    </div>
+    </div> -->
 </div>
