--- a/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
+++ b/dashboardv2/public/js/templates/search/SearchResultLayoutView_tmpl.html
@@ -110,7 +110,7 @@
        
           <div class="entityLink searchTypeSubLabel" style="display: none ; padding: auto;">
             <div class="entityLink">
-              Search Atlas for existing entities {{#if entityCreate}} or
+              Search Data Realm for existing entities {{#if entityCreate}} or
               <a href="javascript:void(0)" data-id="createEntity">
                 create new entity
               </a>
