--- a/dashboardv2/public/js/templates/site/Header.html
+++ b/dashboardv2/public/js/templates/site/Header.html
@@ -81,7 +81,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class="dropdown-submenu">
+                                <!-- <li class="dropdown-submenu">
                                     <a tabindex="-1" href="javascript:void(0)">Help</span></a>
                                     <ul class="dropdown-menu">
                                         <li><a target="_blank" href="http://atlas.apache.org/">Documentation</a></li>
@@ -91,7 +91,7 @@
                                         <li class="show-debug"><a href="javascript:void(0)" data-id="showDebug">Debug</a></li>
                                         {{/if}}
                                     </ul>
-                                </li>
+                                </li> -->
                                 <li role="separator" class="divider"></li>
                                 <li>
                                     <a href="javascript:void(0)" data-id="signOut"><i class="fa fa-sign-out"></i>Logout</a>
