--- a/dashboardv2/public/js/templates/site/MetricsUIInfoView_tmpl.html
+++ b/dashboardv2/public/js/templates/site/MetricsUIInfoView_tmpl.html
@@ -18,13 +18,13 @@
     <h4>Debug Metrics Information</h4>
     <ul class="list-style-disc">
         <li><b>Count</b>
-            <p>Number of times the API has been hit since Atlas started</p>
+            <p>Number of times the API has been hit since Data Realm started</p>
         </li>
         <li><b>Min Time (secs)</b>
-            <p>Minimum API execution time since Atlas started</p>
+            <p>Minimum API execution time since Data Realm started</p>
         </li>
         <li><b>Max Time (secs)</b>
-            <p>Maximum API execution time since Atlas started</p>
+            <p>Maximum API execution time since Data Realm started</p>
         </li>
         <li><b>Average Time (secs)</b>
             <p>Average time taken to execute by an API within an interval of time</p>
