--- a/dashboardv2/public/css/scss/login.scss
+++ b/dashboardv2/public/css/scss/login.scss
@@ -32,17 +32,13 @@
  
    .login-form {
      padding: 60px;
+     padding-top: 5px;
      width: 500px;
      margin: 0 auto;
      background: $white;
      box-shadow: 0px 0px 3px 0px rgba(128, 128, 128, 0.2);
  
-     h4 {
-       font-size: 16px;
-       margin-bottom: 24px;
-       font-weight: 600;
-       text-align: center;
-     }
+   
  
      img {
        height: 65px;
